# avocado

firmware/: Cargo.toml  avr-atmega32u4.json  flash.sh
firmware/src/: main copy.rs  main.rs
