[package]
name = "firmware"
version = "0.1.0"
authors = ["Jack Foltz"]

[dependencies]
avr-device = { version = "0.5", features = ["atmega32u4", "rt"] }
atmega-usbd = { git = "https://github.com/agausmann/atmega-usbd.git" }
usb-device = "0.2"
usbd-hid = "0.6"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
